@@ -3957,7 +3957,7 @@ Self closed html pairs (bug 5487)
 <center><font id="bug" />Centered text</center>
 <div><font id="bug2" />In div text</div>
 !! result
-<div class="center">&lt;font id="bug" /&gt;Centered text</div>
+<center>&lt;font id="bug" /&gt;Centered text</center>
 <div>&lt;font id="bug2" /&gt;In div text</div>
 
 !! end
